Fix temporaire overflow-x Modif layouts (voir Readme)

--- a/css/custom.css
+++ b/css/custom.css
@@ -10,6 +10,10 @@
     background-color: #463A34;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 .wrapper{
     max-width: 960px;
     margin: 0 auto;
